--- a/karteikarten/try.tex
+++ b/karteikarten/try.tex
@@ -239,12 +239,25 @@
 {\textbf{Was sagt die Heat-Equation aus?\newline} \textcolor<1>{white}{
 		Die Heat-Equation beschreibt den Fluss von Wärme in Richtung der Nachbarn.
 } }
-{\textbf{Was ist der implizite Euler?\newline} \textcolor<1>{white}{
+{\textbf{Was ist der implizite Euler? (HEAT)\newline} \textcolor<1>{white}{
 		$u[i,j,t+1]=u[i,j,t]+\delta t \cdot\mathop{\!\mathbin\bigtriangleup}u[i,j,t+1]$\\
 		\textbf{Vorteil:} stabil für jeden Zeitschritt, \textbf{Nachteil:} hoher Rechenaufwand
 } }
-{\textbf{Was ist der explizite Euler?\newline} \textcolor<1>{white}{
-		Die Heat-Equation beschreibt den Fluss von Wärme in Richtung der Nachbarn.
+{\textbf{Was ist der explizite Euler? (HEAT)\newline} \textcolor<1>{white}{
+		Berechne $v[i,j]=t\mathop{\!\mathbin\bigtriangleup}u=\dot{u}$ und anschließend $u[i,j,t+1]=u[i,j,t]+\delta t\cdot v[i,j]$\\
+		\textbf{Vorteil:} schnell und einfach zu implementieren, \textbf{Nachteil:} instabil bei großen Zeitsprüngen, da $\delta t$ nicht mehr konvergiert, der Fehler stark zunimmt und somit keine Lösung mehr möglich ist.
+} }
+{\textbf{Was passiert bei zu hohen Schritten im expliziten Euler?\newline} \textcolor<1>{white}{
+		Er konvergiert nicht mehr, da die Nachbarn einen zu hohen Einfluss auf die Lösung haben. Um ihn trotzdem zu berechnen, müsste man mehr Nachbarn in Betracht ziehen, da bei zu hohen Zeitschritten auch weit entfernte Nachbarn einen Einfluss auf den betrachteten Punkt haben.
+} }
+{\textbf{Was ist die CFL-Bedingung?\newline} \textcolor<1>{white}{
+		$\delta t\leq\frac{h}{\|v\|}$, mit Informationskonstante $\|v\|$.
+} }
+{\textbf{Wann ist der Gleichgewichtszustand erreicht?\newline} \textcolor<1>{white}{
+		Der implizite Euler konvergiert immer gegen den statischen Gleichgewichtszustand der Heat-Equation, der durch die Laplace-Equation $\mathop{\!\mathbin\bigtriangleup}u=0$ beschrieben wird. Während der explizite Euler nur bei ausreichend kleinen Zeitschritten konvergiert.
+} }
+{\textbf{Was passiert mit den Randpunkten? (HEAT)\newline} \textcolor<1>{white}{
+		Die Randpunkte bleiben konstant.
 } }
 }%
 
