neue frage + antwort

--- a/scico.tex
+++ b/scico.tex
@@ -402,9 +402,12 @@
 	\item \textbf{ Was ist die Band-\chf?} \newline
 	\fbox{\parbox[c]{\textwidth}{Zunächst lege eine Band-Matrix-Datenstruktur für L an. Der Speicherverbrauch ist nun $O(mb)$ anstatt $O(m^2)$, wobei b die Bandbreite von der Bandmatrix ist. Bei der Berechnung der $l_{ij}$ von $L$ müssen nur Einträge $l_{ij} \in Band(L)$ berücksichtigt werden, da alle anderen Einträge null sind. Dies reduziert den Rechenaufwand von $O(m^3)$ auf $O(mb^2)$.
 		Löse nun $Ly=b$ und $L^Tx=y$ unter Ausnutzung der Bandbegrenzung von L. Dies reduziert den Aufwand von $O(m^2)$ auf $O(mb)$.}}
-	
 	\item \textbf{ Wieso macht man den Band-\chf und was ist der Vorteil davon?}\newline
 	\fbox{\parbox[c]{\textwidth}{Geringerer Speicherplatzverbrauch und schneller (vgl. Frage davor).}}
+	\item \textbf{Wozu verwendet man den Eliminationsgraphen und wie funktioniert dieser?}\newline
+	\fbox{\parbox[c]{\textwidth}{Der Eliminationsgraph ermittelt genau die Anzahl an Fill-ins die neu auftreten durch die \chf. Aufgestellt wird er so: Erstelle einen Konten für jede Spalte.
+	Wenn in A  $a_{ij} \neq 0$ ist, dann ziehe eine Kante von vom Knoten i nach Knoten j. Dies ist der initial Graph, nun entferne suk­zes­si­v die Knoten(angefangen mit Knoten 1) bis nur noch 1 Knoten übrig ist.
+	Wenn ein Weg zwischen zwei Knoten über den gelöschten Knoten führte, so ziehe eine neue Kante der diesen Weg wiederspiegelt. Alle so neu gezogenen Kanten stellen Fill-ins dar die in der \chf auftreten werden.}}
 	\item \textbf{ Was macht der Minimum degree-Algorithmus?}\newline
 	\fbox{\parbox[c]{\textwidth}{
 	Ziel: Permutation finden, sodass $LL^T=PAP^T$ möglichst wenig fill-in besitzt.\\
