--- a/scico.tex
+++ b/scico.tex
@@ -301,7 +301,7 @@
 	\fbox{\parbox[c]{\textwidth}{Wir betrachten nur das Gleichgewicht, welches nicht mit expliziter Integration lösbar ist, da es unabhängig von der Zeit ist.}}
 	\item \textbf{ Wie unterscheidet sich das Lösen des Gleichungssystems beim Laplace zu den konjugierten?} \newline
 	\fbox{\parbox[c]{\textwidth}{Die konjugierten Verfahren lösen dieses iterativ, während bei der Laplace Gleichung genau eine Lösung gefunden wird. Da er unabhängig vom der Zeit ist, kann die explizite Euler Integration nicht angewendet werden. }}
-	\item \textbf{ Wie löst man dieses Gl?}\newline
+	\item \textbf{ Wie löst man die Laplace-Gleichung?}\newline
 	\fbox{\parbox[c]{\textwidth}{Dieses Gl ist mit der \chf lösbar. Die Zeitkomplexität ist allerdings in diesem Fall mit $O(m^3)$ hoch, wodurch die Lösungweise durch iterative Lösungverfahren besser ist.}}
 	\item \textbf{ Welche Eigenschaft hat die Laplace-Matrix?}\\
 	\fbox{\parbox[c]{\textwidth}{	$-L$ hat folgende Eigenschaften:
