--- a/scico.tex
+++ b/scico.tex
@@ -271,8 +271,8 @@
 	\fbox{\parbox[c]{\textwidth}{
 	\begin{tabular}{l|l}
 		explizit & implizit\\\hline
-		Explizit: Berechne $v[i,j]=\mathop{}\!\mathbin\bigtriangleup u=\dot{u}$ &Implizit: $u[i,j,t+1]=u[i,j,t]+\delta t \cdot \mathop{}\!\mathbin\bigtriangleup u[i,j,t+1]$ \\
-		und dann $u[i,j,t+1]=u[i,j,t]+\delta t \cdot v[i,j]$ &  erfordert also das Lösen des GLs:$(I-\delta t )\mathop{}\!\mathbin\bigtriangleup u[t+1]=u[t]$\\
+		Explizit: Berechne $v[i,j,t]=\mathop{}\!\mathbin\bigtriangleup u=\dot{u}$ &Implizit: $u[i,j,t+1]=u[i,j,t]+\delta t \cdot \mathop{}\!\mathbin\bigtriangleup u[i,j,t+1]$ \\
+		und dann $u[i,j,t+1]=u[i,j,t]+\delta t \cdot v[i,j,t]$ &  erfordert also das Lösen des GLs:$(I-\delta t )\mathop{}\!\mathbin\bigtriangleup u[t+1]=u[t]$\\
 		\textbf{Vorteile:}&\textbf{Vorteile:}\\
 		einfach zu verstehen& verwendet Zeitableitung $\dot{u}$ am nächsten Zeitpunkt $u[t+1]$\\
 		einfach zu implementieren & stabil für jeden Zeitschritt \\
