fehler im include behoben

--- a/scico.tex
+++ b/scico.tex
@@ -59,7 +59,7 @@
 	\fbox{\parbox[c]{\textwidth}{\luf, \chf,..}}
 	\item \textbf{ Wie werden $A$ und $b$ aufgestellt?} \newline
 	\fbox{\parbox[c]{\textwidth}{b beinhaltet die Werte $y_i$ der gegebenen Punkte. In $A$ werden die Basisfunktionen gespeichert, also zB. Monome (wie Übung) werden in der ersten Zeile die $x_1^{0...n}$ und in den Spalten $x_{1..n}$ gespeichert. Somit steht in der i-ten Zeile und j-ten Spalte der Eintrag $x_{i+1}^j$.\\ 
-	\includegraphics[scale=0.3]{Axb}}}
+	\includegraphics[scale=0.3]{Axb.png}}}
 	\item \textbf{ Was ist eine Basisfunktion?} \newline
 	\fbox{\parbox[c]{\textwidth}{Eine Basisfunktion beschreibt eine Kurve mit einer endliche Anzahl von Parametern. Die von uns verwendete Basisfunktion ist die Monom-Basis $x^i$.}}
 	\item \textbf{ Wie funktioniert \luf und wie löst man das Gleichungssystem?} \newline
